# ucp-a2a-payment-integrity

./: .gitignore  README.md  demo.py  demo_fail.py  file:memdb1?mode=memory&cache=shared  file:memdb_0addcd65-ea32-4ad6-86b6-92619f403f67?mode=memory&cache=shared  file:memdb_0af8efb3-ea41-4d0c-9758-8f74c8018da6?mode=memory&cache=shared  file:memdb_1551bfc5-acc1-40e2-ae71-af105630fc6c?mode=memory&cache=shared  file:memdb_291a2772-4899-4aec-9018-c4b1ab7686e3?mode=memory&cache=shared  file:memdb_29d7c766-c24d-4032-9a93-e63a7a00f296?mode=memory&cache=shared  file:memdb_2ae82157-4aba-4b20-acb5-990be7c47dd1?mode=memory&cache=shared  file:memdb_44044d97-cc3c-405d-869b-a2b11e025691?mode=memory&cache=shared  file:memdb_5d08b7a1-6985-4b1c-986b-0cf3c4bf3293?mode=memory&cache=shared  file:memdb_a489374b-a1d4-4ee2-8576-67bbda0135e7?mode=memory&cache=shared  file:memdb_b474edc3-b982-48a2-a067-4c084dfb7acf?mode=memory&cache=shared  file:memdb_ee74ba7e-e293-4f00-9eb3-8a5a90eeddc9?mode=memory&cache=shared  file:memdb_f1b7bd19-6c36-4601-a7cf-547d65225725?mode=memory&cache=shared  paper_results.csv  pyproject.toml  test.db
app/: main.py  settings.py
app/a2a/: dispatcher.py  schemas.py
app/domain/: errors.py  models.py
app/infra/: idempotency.py  lock_manager.py  store.py
app/routes/: a2a_rpc.py  well_known.py
app/services/: catalog_service.py  (+2 more)
docs/: system_design.md
experiments/: metrics.py  runner.py
scripts/: generate_plots.py
tests/: conftest.py  test_a2a_checkout_basics.py  test_p1_a2a_checkout_basics.py  test_p2_idempotency.py  test_p3_persistence.py
(+5 files in other folders)
