[project]
name = "ucp-a2a-payment-integrity"
version = "0.1.0"
description = "Minimal UCP Checkout business-agent over A2A"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.22.1",
]

[project.scripts]
ucp-agent = "experiments.runner:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
